# acp-bus

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md
crates/acp-bus-mcp/: Cargo.toml
crates/acp-bus-mcp/src/: main.rs
crates/acp-core/: Cargo.toml
crates/acp-core/src/: adapter.rs  agent.rs  bus_socket.rs  bus_types.rs  channel.rs  client.rs  comm_log.rs  fair_scheduler.rs  group.rs  lib.rs  pending_tasks.rs  process.rs  registry.rs  reverse_request.rs  router.rs  scheduler.rs  store.rs  terminal.rs  wait_graph.rs
crates/acp-core/tests/: client_integration.rs  real_agent_connectivity.rs
crates/acp-mock/: Cargo.toml
crates/acp-mock/src/: main.rs
crates/acp-protocol/: Cargo.toml
crates/acp-protocol/src/: content.rs  handshake.rs  jsonrpc.rs  lib.rs  reverse.rs  session.rs
crates/acp-server/: Cargo.toml
crates/acp-server/src/: handler.rs  lib.rs  notifications.rs  transport.rs
crates/acp-tui/: Cargo.toml
crates/acp-tui/src/: app.rs  i18n.rs  layout.rs  lib.rs  theme.rs
crates/acp-tui/src/app/: bus_events.rs  clipboard.rs  commands.rs  image.rs  lifecycle.rs  mod.rs  prompting.rs
crates/acp-tui/src/components/: input.rs  messages.rs  mod.rs  status_bar.rs
docs/: broadcast-channel-analysis.md  test-scenarios.md
docs/devlog/: 2026-03-27.md  2026-03-29.md
docs/presentation/: index.html
docs/rfcs/: agent-session-recovery.md
docs/superpowers/plans/: 2026-03-25-tui-enhancements.md  2026-03-26-comprehensive-upgrade.md  2026-03-29-group-dispatch-fixes.md  2026-03-29-tui-refactor-cleanup.md
src/: main.rs
