[package]
name = "acp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
acp-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex = "1"
dirs = "6"
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
